# cg-oceano-es-dinamico

./: .gitignore  CMakeLists.txt  README.md
data/: spectrum.txt
docs/informe/: informe.tex
shaders/: basico.frag  basico.vert  oceano.frag  oceano.vert  skybox.frag  skybox.vert
shared/: README.md
src/: Barco.cpp  Barco.h  Camara.cpp  Camara.h  ElementoEscena.h  ElementoEscenaFactory.cpp  ElementoEscenaFactory.h  Escena.cpp  Escena.h  Faro.cpp  Faro.h  GestorOlas.cpp  GestorOlas.h  Isla.cpp.txt  Isla.h  Matematica.h  ObjetoRenderizable.cpp  ObjetoRenderizable.h  Oceano.cpp  Oceano.h  Ola.cpp  Ola.h  Primitivas.cpp.txt  Primitivas.h  PuntoMalla.h  Shader.cpp.txt  Shader.h.txt  Skybox.cpp.txt  Skybox.h.txt  main.cpp
